Closed Bug 1167720 Opened 9 years ago Closed 9 years ago

plugin-container on GTK3 crashes running test layout/base/tests/chrome/test_chrome_over_plugin.xul

Categories

(Core :: Widget: Gtk, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: acomminos, Assigned: acomminos)

References

Details

Attachments

(1 file)

The test layout/base/tests/chrome/test_chrome_over_plugin.xul fails due to plugin-container crashing on GTK3 with the following error:

    The program 'plugin-container' received an X Window System error.
    This probably reflects a bug in the program.
    The error was 'BadDrawable (invalid Pixmap or Window parameter)'.
      (Details: serial 280 error_code 9 request_code 14 minor_code 0)
      (Note to programmers: normally, X errors are reported asynchronously;
       that is, you will receive the error a while after causing it.
       To debug your program, run it with the --sync command line
       option to change this behavior. You can then get a meaningful
       backtrace from your debugger if you break on the gdk_x_error() function.)
This fixes bustage caused by an outdated (pre-GTK3) macro.

Some tests in this suite still don't pass; I believe this to be unrelated and probably best tacked in a separate bug.
Attachment #8611368 - Flags: review?(karlt)
Attachment #8611368 - Flags: review?(karlt) → review+
Oops; GTK3 try patch wasn't building.

Updated try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=cf810f3da26d
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/ee5c01c6659d
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: