Bug 1167720 - Fix invalid window ID provided to GTK3 plugin container children. r=karlt